Added div with id + class + comment of both

--- a/info.plist
+++ b/info.plist
@@ -186,6 +186,7 @@
 		<string>1515D295-2FFD-4EEB-87FA-034B3ECE372C</string>
 		<string>D842261E-0A8E-46F6-9E53-DB2BCD3A79E4</string>
 		<string>04EEBC2E-9139-4C1D-A900-A6C2536D94B3</string>
+		<string>57297F74-DCA2-4E54-A05F-E43DFC4DD6FE</string>
 		<string>F6C7BFFB-8605-4A96-B7D1-CDA41328115F</string>
 		<string>F3248EB7-CE63-4EB1-AC59-4A22F81A910A</string>
 		<string>EBB98620-3292-4621-BA38-D8A9A65D9551</string>
